--- a/style1.css
+++ b/style1.css
@@ -1,77 +1,92 @@
 body {
-    background-image: url(https://cdn.pixabay.com/photo/2017/03/25/20/51/quiz-2174368_960_720.png);
-    background-repeat: no-repeat;
-    background-size:auto;
-    background-color: rgb(1, 5, 23);
+  background-image: url(https://cdn.pixabay.com/photo/2017/03/25/20/51/quiz-2174368_960_720.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-color: rgb(1, 5, 23);
 }
 
 div {
-    position: relative;
-    width: 50%; 
-    float: right;
+  position: relative;
+  width: 50%;
+  float: right;
 }
 
 button {
-    text-decoration: none;
-    color: rgb(27, 60, 89);
-    text-shadow: 5px 5px 5px black 5px 5px 5px rgb(26, 26, 60);
-    background-color: yellow;
-    border-radius: 50%;
-    padding: 20px;
-    font-size: xx-large;
-    font-family: fantasy;
-    font-style: italic;
-    letter-spacing: 2px;
-    position: fixed;
-    bottom: 50px;
-    right: 50%;
+  text-decoration: none;
+  color: rgb(27, 60, 89);
+  text-shadow: 5px 5px 5px black 5px 5px 5px rgb(26, 26, 60);
+  background-color: yellow;
+  border-radius: 50%;
+  padding: 20px;
+  font-size: xx-large;
+  font-family: fantasy;
+  font-style: italic;
+  letter-spacing: 2px;
+  position: fixed;
+  bottom: 50px;
+  right: 50%;
 }
 
 button:hover {
-    box-shadow: 5px 5px 5px 10px rgb(194, 82, 8);
-    border-color: orangered;
+  box-shadow: 5px 5px 5px 10px rgb(221, 219, 118);
+  border-color: rgb(17, 0, 255);
 }
 
 h1 {
-    color: aliceblue;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 100px;
-    font-weight: bolder;
-    width: 100%;
-    position: relative;
-    top: 0;
-    text-align: center;
+  color: aliceblue;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 100px;
+  font-weight: bolder;
+  width: 100%;
+  position: relative;
+  top: 0;
+  text-align: center;
 }
 
 img {
-    position: relative;
-    top: 90px;
-    left: 40%;
-    border:7px solid rgb(27, 60, 89);
-    border-radius: 50%;
+  position: relative;
+  top: 90px;
+  left: 40%;
+  border: 7px solid rgb(27, 60, 89);
+  border-radius: 50%;
 }
 
-@media screen  and (max-width:1200px) {
-    div {
-        width: 100%;
-        float: none;
-    }
+@media screen and (max-width: 1200px) {
+  div {
+    width: 100%;
+    float: none;
+  }
 
-    body {
-        background-image: none;
-    }
+  body {
+    background-image: none;
+  }
 
-    h1 {
-        font-size: 50px;
-    }
+  h1 {
+    font-size: 50px;
+  }
 
-    img {
-        margin:-50px;
-    }
+  img {
+    margin: -50px;
+  }
 
-    button {
-        bottom: 200px;
-        right: 35%;
-    }
-
+  button {
+    bottom: 200px;
+    right: 35%;
+  }
+}
+@media screen and (max-width: 400px) {
+  body {
+  }
+  header h1 {
+    text-align: center;
+  }
+  section img {
+    position: static;
+    margin: 10% auto;
+  }
+  #clik {
+    position: static;
+    margin: 10% auto;
+    display: block;
+  }
 }
