--- a/style1.css
+++ b/style1.css
@@ -61,6 +61,7 @@ img {
   }
 
   body {
+    height: 100vh;
     background-image: none;
   }
 
@@ -69,7 +70,8 @@ img {
   }
 
   img {
-    margin: -50px;
+    display: block;
+    margin: 10% auto;
   }
 
   button {
