--- a/style.css
+++ b/style.css
@@ -50,16 +50,29 @@ input[type="reset"]:hover {
 }
 @media screen and (max-width: 600px) {
   div {
-    margin: 50px 10%;
+    margin: 10% 5%;
   }
 
-  body {
-    font-size: small;
+  p {
+    font-size: 14px;
+    margin: 5px;
+    padding-left: 5px;
   }
-
+  .np,
+  .pos {
+    font-size: 16px;
+    margin: 10% auto;
+  }
+  h2 {
+    font-size: 16px;
+    text-align: left;
+    padding: 5px;
+    margin: 10px;
+  }
   .poruka {
     margin: 0 10%;
     padding: 3px 0;
     width: 80%;
+    font-size: 16px;
   }
 }
